--- a/index.html
+++ b/index.html
@@ -433,6 +433,18 @@ Team Leader, Student team project. Used html, d3, javascript, and vector graphic
 Created instructional statistical analysis code modules for Middle School and High School science teachers to help improve science methodology and educational technology skills. Modules were written in R, a popular statistical analysis language for scientists and were posted using R-fiddle, an online editor which allows for collaborative development and sharing. <br />
 <a href="http://diversityandecology.blogspot.com/" target="_blank">Statistical Analysis Code Modules (blog site)</a>
 </p>
+	
+<p style="text-align:left"><b>CPALMS 3D & MyStemKits</b> | 3D Printing Resources for K-12 Education<br /> 
+Engineer, Concept Artist, Science Advisor, and Curriculum Developer for creating novel and innovative 3D models to be used in K-12 Classrooms. The initial CPALMS 3D program eventually emerged as MyStemKits.com, with whom our FCR-STEM curriculum team partnered to create new products.<br />
+<a href="https://www.mystemkits.com/" target="_blank">MyStemKits</a>
+</p>		
+	
+<p style="text-align:left"><b>CPALMS Perspectives</b> | STEAM Videos for Teacher Professional Development<br /> 
+Producer/Director for over 400 five-minute documentary-style videos about math and science. Created a network of contacts among education enthusiasts across Florida. <br />
+<a href="http://www.cpalms.org/Public/ResourceCollectioncategory/Preview/42" target="_blank">CPALMS Perspectives</a>
+</p>	
+	
+	
 </div> <!--end outreach container-->
 
 
