--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ Table-top presentation to engage young students to create simple circuits.
 <p style="text-align:left"><b>Invited Presenter</b> | Cambridge Public Schools Computer Science Playground, Cambridge, MA<br /> 
 Table-top presentations to engage young students to create simple circuits. Attended all five sessions in middle schools around Cambridge.
 </p>	
-<p style="text-align:left"><b>Invited Judge</b> | Massachusetts State Science \& Engineering Fair, Cambridge, MA<br /> 
+<p style="text-align:left"><b>Invited Judge</b> | Massachusetts State Science & Engineering Fair, Cambridge, MA<br /> 
 Assessed high school student science fair projects in the Life Sciences category.
 </p>	
 <p style="text-align:left"><b>Fellow, Graduate Students in K-12 Education (GK-12)</b> | National Science Foundation<br /> 
