--- a/index.html
+++ b/index.html
@@ -312,16 +312,16 @@
 <div id="education" class="container text-center">
   <h3>Education</h3>
 <p style="text-align:left"><b>PhD, Technology</b> | Purdue University, College of Technology (now Purdue Polytechnic Institute)<br/>
-Worked with <a href="https://polytechnic.purdue.edu/profile/bertolig">Gary Bertoline</a> at the <a href="https://www.rcac.purdue.edu/envision/">Envision Center</a> for Data Perceptualization to explore human spatial perception and its relationship to three varieties of spatial ability test scores among video game players. I also created a visuospatial taxonomy to describe video games for research in that field. 
+Worked with <a href="https://polytechnic.purdue.edu/profile/bertolig" target="_blank">Gary Bertoline</a> at the <a href="https://www.rcac.purdue.edu/envision/" target="_blank">Envision Center</a> for Data Perceptualization to explore human spatial perception and its relationship to three varieties of spatial ability test scores among video game players. I also created a visuospatial taxonomy to describe video games for research in that field. 
 </p>
 <p style="text-align:left"><b>MS, Technology</b> | Purdue University, College of Technology (now Purdue Polytechnic Institute)<br/>
 Worked with Gary Bertoline at the Envision Center for Data Perceptualization to explore the uses and roles of interactive virtual reality technologies for science education.
 </p>
 <p style="text-align:left"><b>MS, Horticulture</b> | Purdue University, Department of Horticulture and Landscape Architecture<br/>
-Worked with plant physiologist <a href="https://ag.purdue.edu/hla/Pages/profile.aspx?strAlias=cmitchel&intDirDeptID=16">Cary A. Mitchell</a> and plant molecular biologist <a href="https://ag.purdue.edu/hla/Pages/profile.aspx?strAlias=kraghoth&intDirDeptID=16">Kashchandra G. Raghothama</a> to explore the presence and characterization of touch-induced gene expression in soybean. 
+Worked with plant physiologist <a href="https://ag.purdue.edu/hla/Pages/profile.aspx?strAlias=cmitchel&intDirDeptID=16" target="_blank">Cary A. Mitchell</a> and plant molecular biologist <a href="https://ag.purdue.edu/hla/Pages/profile.aspx?strAlias=kraghoth&intDirDeptID=16" target="_blank">Kashchandra G. Raghothama</a> to explore the presence and characterization of touch-induced gene expression in soybean. 
 </p>
 <p style="text-align:left"><b>BS, Biology</b> | Henderson State University, Department of Biology. <br/>
-Focused my studies on plant biology. Worked with field biologist Daniel Marsh and molecular biologist <a href="http://www.hsu.edu/directory/people/professors/jamesengman.html">James Engman</a> on undergraduate research projects. 
+Focused my studies on plant biology. Worked with field biologist Daniel Marsh and molecular biologist <a href="http://www.hsu.edu/directory/people/professors/jamesengman.html" target="_blank">James Engman</a> on undergraduate research projects. 
 </p>
 <br/>
 
@@ -374,7 +374,8 @@ Table-top presentations to engage young students to create simple circuits. Atte
 Assessed high school student science fair projects in the Life Sciences category.
 </p>	
 <p style="text-align:left"><b>Fellow, Graduate Students in K-12 Education (GK-12)</b> | National Science Foundation<br /> 
-Prepared and implemented lesson plans for 8th grade students with focus on data visualization and scientific critical thinking skills. My lesson on discovering and visualizing a social network from student-generated simulated virus transmission data was published in a national journal for middle school teachers. 
+Awarded Graduate Fellowship for "The Indiana Interdisciplinary GK-12: Bringing Authentic Problem Solving in STEM to Rural Middle Schools." Prepared and implemented lesson plans for 8th grade students with focus on data visualization and scientific critical thinking skills. My lesson on discovering and visualizing a social network from student-generated simulated virus transmission data was published in a national journal for middle school teachers.<br />
+<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=0538643" target="_blank">NSF Award (#0538643) Details</a>	
 </p>
 <p style="text-align:left"><b>Project Counselor, NASA Spaceflight and Life Sciences Training Program (SLSTP)</b> | Tuskeegee University<br /> 
 Assisted with management of a six-week undergraduate research experience at Kennedy Space Center (NASA-KSC) in Cape Canaveral, Florida. Led and provided mentoring to a group of undergraduate students interested in life sciences research in the context of space exploration.
@@ -452,7 +453,7 @@ Producer/Director for over 400 five-minute documentary-style videos about math a
 
 <div id="publications" class="container text-center">
   <h3>Publications</h3>
-	<p style="text-align:left">Dyehouse, M., <b>Santone, A. L.</b>, Kisa, Z., Carr, R. L., and Razzouk, R. (2018). A Novel 3D+MEA Approach to Authentic Engineering Education for Teacher Professional Development: Design Principles and Outcomes. Journal of Pre-College Engineering Education Research (J-PEER): Vol. 9: Iss. 1, Article 4. <a href="https://doi.org/10.7771/2157-9288.1168">https://doi.org/10.7771/2157-9288.1168</a></p>
+	<p style="text-align:left">Dyehouse, M., <b>Santone, A. L.</b>, Kisa, Z., Carr, R. L., and Razzouk, R. (2018). A Novel 3D+MEA Approach to Authentic Engineering Education for Teacher Professional Development: Design Principles and Outcomes. Journal of Pre-College Engineering Education Research (J-PEER): Vol. 9: Iss. 1, Article 4. <a href="https://doi.org/10.7771/2157-9288.1168" target="_blank">https://doi.org/10.7771/2157-9288.1168</a></p>
 	<p style="text-align:left">Razzouk, R., Dyehouse, M., <b>Santone, A.</b>, and Carr, R. L. (2014). Plants versus Pollutants: An interdisciplinary model-eliciting activity to bring engineering design practices and real-world context to the science classroom. The Science Teacher, 81(9), 43-49.</p>
 	<p style="text-align:left"><b>Santone, A. L.</b> (2009). Visuospatial characterization and analysis of spatial abilities of video game players (Doctoral Dissertation). Purdue University, West Lafayette, IN.</p>
 	<p style="text-align:left">Ertmer, P. A., Stepich, D., Flanagan, S., Kocaman-Karoglu, A., Reiner, C., Reyes, L., <b>Santone, A.</b>, and Ushigusa, S. (2009). Impact of Guidance on the Problem-Solving Efforts of Instructional Design Novices. Performance Improvement Quarterly, 21(4), 117-132.</p>
