--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@ Awarded Graduate Fellowship for "The Indiana Interdisciplinary GK-12: Bringing A
 </p>
 <p style="text-align:left"><b>Project Counselor, NASA Spaceflight and Life Sciences Training Program (SLSTP)</b> | Tuskeegee University<br /> 
 Assisted with management of a six-week undergraduate research experience at Kennedy Space Center (NASA-KSC) in Cape Canaveral, Florida. Led and provided mentoring to a group of undergraduate students interested in life sciences research in the context of space exploration.
+<a href="https://www.jstor.org/stable/44737957?seq=1#page_scan_tab_contents" target="_blank">Trotman, et. al.: The Spaceflight and Life Sciences Training Program – Developing Human Capital for Space Exploration through Systematic Scholarship</a>
 </p>
 
 </div> <!--end outreach container-->
