--- a/index.html
+++ b/index.html
@@ -476,6 +476,7 @@ Producer/Director for over 400 five-minute documentary-style videos about math a
 <div id="presentations" class="container text-center">
   <h3>Presentations</h3>
 
+<p style="text-align:left">Jan 2019<br/> Citizen Schools Teacher Professional Development; Boston, MA<br/> Developing Creative & Inventive Mindsets & Skills </p>
 <p style="text-align:left">Dec 2015<br/> FCR-STEM Annual Conference; Orlando, FL<br/> Perspectives Video Resources for Ecology Topics</p>
 <p style="text-align:left">Oct 2015<br/>  Florida Association of Science Teachers (FAST); Tallahassee, FL<br/> CPALMS 3D, CPALMS Sensors, CPALMS Perspectives</p>
 <p style="text-align:left">May 2015<br/>  Florida Association of Science Supervisors; Orlando, FL<br/> CPALMS 3D overview presentation</p>
