--- a/index.html
+++ b/index.html
@@ -361,6 +361,12 @@ Focused my studies on plant biology. Worked with field biologist Daniel Marsh an
 <div id="outreach" class="container">
   <h3 class="text-center">Outreach</h3> 
 
+<p style="text-align:left">Feb 2019<br/> Lemelson-MIT; Cambridge, MA<br/> JV InvenTeams Winter Break Program </p>
+<p style="text-align:left">Dec 2018<br/> The Morse Elementary School; Cambridge, MA<br/> Invited Presenter: Input & Output for Inventing Environment-sensing Devices <br /> 
+Prepared and implemented a presentation for a group of after-school students in grades 2-5. This presentation was part of Computer Science Education Week and focused on input, output, and sensors to convert among various sensory inputs. Students held discussions and created sketches to explain their devices.</p>
+<p style="text-align:left">Apr 2018<br/> Lemelson-MIT; Cambridge, MA<br/> JV InvenTeams Spring Break Program </p>	
+
+<!--
 <p style="text-align:left"><b>Invited Presenter</b> | The Morse Elementary School, Cambridge, MA<br /> 
 Prepared and implemented a presentation for a group of after-school students in grades 2-5. This presentation was part of Computer Science Education Week and focused on input, output, and sensors to convert among various sensory inputs. Students held discussions and created sketches to explain their devices.
 </p>	
@@ -381,6 +387,7 @@ Awarded Graduate Fellowship for "The Indiana Interdisciplinary GK-12: Bringing A
 Assisted with management of a six-week undergraduate research experience at Kennedy Space Center (NASA-KSC) in Cape Canaveral, Florida. Led and provided mentoring to a group of undergraduate students interested in life sciences research in the context of space exploration.
 <a href="https://www.jstor.org/stable/44737957" target="_blank">Trotman, et. al.: The Spaceflight and Life Sciences Training Program – Developing Human Capital for Space Exploration through Systematic Scholarship</a>
 </p>
+-->
 
 </div> <!--end outreach container-->
 
