--- a/index.html
+++ b/index.html
@@ -361,10 +361,15 @@ Focused my studies on plant biology. Worked with field biologist Daniel Marsh an
 <div id="outreach" class="container">
   <h3 class="text-center">Outreach</h3> 
 
-<p style="text-align:left">Feb 2019<br/> Lemelson-MIT; Cambridge, MA<br/> JV InvenTeams Winter Break Program </p>
-<p style="text-align:left">Dec 2018<br/> The Morse Elementary School; Cambridge, MA<br/> Invited Presenter: Input & Output for Inventing Environment-sensing Devices <br /> 
-Prepared and implemented a presentation for a group of after-school students in grades 2-5. This presentation was part of Computer Science Education Week and focused on input, output, and sensors to convert among various sensory inputs. Students held discussions and created sketches to explain their devices.</p>
-<p style="text-align:left">Apr 2018<br/> Lemelson-MIT; Cambridge, MA<br/> JV InvenTeams Spring Break Program </p>	
+<p style="text-align:left">Feb 2019 | <b>Program Lead</b> | JV InvenTeams Winter Break Program, Cambridge, MA<br /> 
+Collaboratively prepared and implemented invention education programming for middle school students. 
+</p>	
+<p style="text-align:left">Dec 2018 | <b>Invited Presenter</b> | The Morse Elementary School, Cambridge, MA<br /> 
+Prepared and implemented a presentation for a group of after-school students in grades 2-5. This presentation was part of Computer Science Education Week and focused on input, output, and sensors to convert among various sensory inputs. Students held discussions and created sketches to explain their devices.
+</p>
+<p style="text-align:left">Apr 2018 | <b>Program Lead</b> | JV InvenTeams Spring Break Program, Cambridge, MA<br /> 
+Collaboratively prepared and implemented invention education programming for middle school students. 
+</p>	
 
 <!--
 <p style="text-align:left"><b>Invited Presenter</b> | The Morse Elementary School, Cambridge, MA<br /> 
