--- a/index.html
+++ b/index.html
@@ -367,33 +367,26 @@ Collaboratively prepared and implemented invention education programming for mid
 <p style="text-align:left">Dec 2018 | <b>Invited Presenter</b> | The Morse Elementary School, Cambridge, MA<br /> 
 Prepared and implemented a presentation for a group of after-school students in grades 2-5. This presentation was part of Computer Science Education Week and focused on input, output, and sensors to convert among various sensory inputs. Students held discussions and created sketches to explain their devices.
 </p>
+<p style="text-align:left">Oct 2018 | <b>Invited Presenter</b> | City of Cambridge STEAM It Up!, Cambridge, MA<br /> 
+Table-top presentation to engage young students to create simple circuits. 
+</p>
+<p style="text-align:left">Jun 2018 | <b>Invited Presenter</b> | Cambridge Public Schools Computer Science Playground, Cambridge, MA<br /> 
+Table-top presentations to engage young students to create simple circuits. Attended all five sessions in middle schools around Cambridge.
+</p>
+<p style="text-align:left">May 2018 | <b>Invited Judge</b> | Massachusetts State Science & Engineering Fair, Cambridge, MA<br /> 
+Assessed high school student science fair projects in the Life Sciences category.
+</p>
 <p style="text-align:left">Apr 2018 | <b>Program Lead</b> | JV InvenTeams Spring Break Program, Cambridge, MA<br /> 
 Collaboratively prepared and implemented invention education programming for middle school students. 
 </p>	
-
-<!--
-<p style="text-align:left"><b>Invited Presenter</b> | The Morse Elementary School, Cambridge, MA<br /> 
-Prepared and implemented a presentation for a group of after-school students in grades 2-5. This presentation was part of Computer Science Education Week and focused on input, output, and sensors to convert among various sensory inputs. Students held discussions and created sketches to explain their devices.
-</p>	
-<p style="text-align:left"><b>Invited Presenter</b> | City of Cambridge STEAM It Up!, Cambridge, MA<br /> 
-Table-top presentation to engage young students to create simple circuits. 
-</p>
-<p style="text-align:left"><b>Invited Presenter</b> | Cambridge Public Schools Computer Science Playground, Cambridge, MA<br /> 
-Table-top presentations to engage young students to create simple circuits. Attended all five sessions in middle schools around Cambridge.
-</p>	
-<p style="text-align:left"><b>Invited Judge</b> | Massachusetts State Science & Engineering Fair, Cambridge, MA<br /> 
-Assessed high school student science fair projects in the Life Sciences category.
-</p>	
-<p style="text-align:left"><b>Fellow, Graduate Students in K-12 Education (GK-12)</b> | National Science Foundation<br /> 
+<p style="text-align:left">2008 | <b>Fellow, Graduate Students in K-12 Education (GK-12)</b> | National Science Foundation<br /> 
 Awarded Graduate Fellowship for "The Indiana Interdisciplinary GK-12: Bringing Authentic Problem Solving in STEM to Rural Middle Schools." Prepared and implemented lesson plans for 8th grade students with focus on data visualization and scientific critical thinking skills. My lesson on discovering and visualizing a social network from student-generated simulated virus transmission data was published in a national journal for middle school teachers.<br />
 <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=0538643" target="_blank">NSF Award (#0538643) Details</a>	
 </p>
-<p style="text-align:left"><b>Project Counselor, NASA Spaceflight and Life Sciences Training Program (SLSTP)</b> | Tuskeegee University<br /> 
+<p style="text-align:left">2004 | <b>Project Counselor, NASA Spaceflight and Life Sciences Training Program (SLSTP)</b> | Tuskeegee University<br /> 
 Assisted with management of a six-week undergraduate research experience at Kennedy Space Center (NASA-KSC) in Cape Canaveral, Florida. Led and provided mentoring to a group of undergraduate students interested in life sciences research in the context of space exploration.
 <a href="https://www.jstor.org/stable/44737957" target="_blank">Trotman, et. al.: The Spaceflight and Life Sciences Training Program – Developing Human Capital for Space Exploration through Systematic Scholarship</a>
 </p>
--->
-
 </div> <!--end outreach container-->
 
 
