--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ Focused my studies on plant biology. Worked with field biologist Daniel Marsh an
 
 
 <div id="outreach" class="container">
-  <h3 class="text-center">Outreach</h3> 
+  <h3 class="text-center">Selected Outreach</h3> 
 
 <p style="text-align:left">Feb 2019 | <b>Program Lead</b> | JV InvenTeams Winter Break Program, Cambridge, MA<br /> 
 Collaboratively prepared and implemented invention education programming for middle school students. 
