--- a/index.html
+++ b/index.html
@@ -481,28 +481,28 @@ Producer/Director for over 400 five-minute documentary-style videos about math a
 <div id="presentations" class="container text-center">
   <h3>Presentations</h3>
 
-<p style="text-align:left">Jan 2019<br/> Citizen Schools Teacher Professional Development; Boston, MA<br/> Developing Creative & Inventive Mindsets & Skills </p>
-<p style="text-align:left">Aug 2018<br/> Lemelson-MIT Teacher Professional Development; Cambridge, MA<br/> Invention Education Workshop </p>
-<p style="text-align:left">Dec 2015<br/> FCR-STEM Annual Conference; Orlando, FL<br/> Perspectives Video Resources for Ecology Topics</p>
-<p style="text-align:left">Oct 2015<br/>  Florida Association of Science Teachers (FAST); Tallahassee, FL<br/> CPALMS 3D, CPALMS Sensors, CPALMS Perspectives</p>
-<p style="text-align:left">May 2015<br/>  Florida Association of Science Supervisors; Orlando, FL<br/> CPALMS 3D overview presentation</p>
-<p style="text-align:left">June 2014<br/>  Science Math Master(SM2); Tampa, FL<br/> Table presentation: CPALMS general program and CPALMS 3D</p>
-<p style="text-align:left">May 2014<br/>  FCR-STEM Annual Conference; Fort Lauderdale, FL<br/> CPALMS Perspectives, CPALMS Code: Real-time simulations, Maps, Graphs, and More!, CPALMS 3D</p>
-<p style="text-align:left">May 2014<br/>  Florida Association of Science Supervisors; Orlando, FL<br/> CPALMS Perspectives, CPALMS Code, CPALMS 3D</p>
-<p style="text-align:left">April 2014<br/>  National Science Teacher Association 2014; Boston, MA<br/> CPALMS Perspectives: STEM Video Resources for Teacher Professional Development Interdisciplinary Model-eliciting Activities Bring Design, Engineering Practices, and RealWorld Context to the Science Classroom</p>
-<p style="text-align:left">Feb 2014<br/>  Florida State University Stacking Layers Symposium; Tallahassee, FL<br/> Floor Presentation, 3D Printing Curriculum for K-12 STEM Education Panel Discussion Presenter, 3D Printing in K-12 STEM Education</p>
-<p style="text-align:left">Jan 2014<br/>  Florida Educational Technology Conference(FETC); Orlando, FL<br/> CPALMS Perspectives and CPALMS 3D, conference floor booth</p>
-<p style="text-align:left">Oct 2013<br/>  Florida Association of Science Teachers (FAST); Miami, FL<br/> CPALMS Creative Computing: Social Network Data and Visualization CPALMS Perspectives: STEM Videos to Bring the World to your Classroom</p>
-<p style="text-align:left">Oct 2013<br/>  Florida Council of Teachers of Mathematics (FCTM); Orlando, FL<br/> CPALMS Perspectives: Experts, Teachers, Professionals, & Enthusiasts supporting STEM teacher professional development through standards-based video resources</p>
-<p style="text-align:left">June 2013<br/>  Florida Alliance for Arts Education (FAAE), Invited co-presenter with FL Division of Cultural Affairs; Tampa, FL<br/> Funding: Opportunity, Quality and Practice (CPALMS Perspectives as a 'best practice') Teaching Artists Certifications (CPALMS Perspectives for CCSS integration)</p>
-<p style="text-align:left">Dec 2012<br/>  FCR-STEM, Annual Conference; St. Petersburg, FL<br/> Unpacking & Mapping the Common Core State Standards Using CPALMS Tools CPALMS Perspectives: Standards-based Video Resources Model-Eliciting Activities: Applying Engineering Principles to Science and Mathematics</p>
-<p style="text-align:left">Oct 2012<br/>  Florida Association of Science Teachers (FAST); St. Pete Beach, FL<br/> CPALMS Perspectives: Standards-Based Video Resources Modeling: Applying Science to Real-World Problem Solving</p>
-<p style="text-align:left">Oct 2012<br/>  Florida Council of Teachers of Mathematics (FCTM); Orlando, FL<br/> CPALMS Perspectives Video Project: Experts, Teachers, and Professionals Unpacking & Mapping the Common Core State Standards using CPALMS Tools</p>
-<p style="text-align:left">Feb 2010<br/>  AAAS and NSF GK-12 Special Focus Meeting; San Diego, CA<br/> Data Visualization for Middle School Students: Lesson Concepts and Challenges from the NSF GK-12 Program</p>
-<p style="text-align:left">Feb 2008<br/>  NSF GK-12 Annual Conference; Washington, D.C.<br/> Effects of 3D Action Video Gameplay on Mental Rotation Ability and Visuospatial Chemistry Problem Solving Skill</p>
-<p style="text-align:left">Feb 2008<br/>  Hoosier Association of Science Teachers; Indianapolis, IN<br/> Data Visualization for 8th Grade Mathematics & Science Enhancing Your Curriculum Through the Use of Visiting Scientists</p>
-<p style="text-align:left">Nov 2002<br/>  American Society for Gravitational & Space Biology; Cape Canaveral, FL<br/> Touch-induced gene expression in Soybean</p>
-<p style="text-align:left">Nov 2001<br/>  American Society for Gravitational & Space Biology; Alexandria, VA<br/> Molecular characterization of the thigmic stress response in soybean</p>
+<p style="text-align:left">Jan 2019 | Citizen Schools Teacher Professional Development; Boston, MA<br/> Developing Creative & Inventive Mindsets & Skills </p>
+<p style="text-align:left">Aug 2018 | Lemelson-MIT Teacher Professional Development; Cambridge, MA<br/> Invention Education Workshop </p>
+<p style="text-align:left">Dec 2015 | FCR-STEM Annual Conference; Orlando, FL<br/> Perspectives Video Resources for Ecology Topics</p>
+<p style="text-align:left">Oct 2015 | Florida Association of Science Teachers (FAST); Tallahassee, FL<br/> CPALMS 3D, CPALMS Sensors, CPALMS Perspectives</p>
+<p style="text-align:left">May 2015 | Florida Association of Science Supervisors; Orlando, FL<br/> CPALMS 3D overview presentation</p>
+<p style="text-align:left">June 2014 | Science Math Master(SM2); Tampa, FL<br/> Table presentation: CPALMS general program and CPALMS 3D</p>
+<p style="text-align:left">May 2014 | FCR-STEM Annual Conference; Fort Lauderdale, FL<br/> CPALMS Perspectives, CPALMS Code: Real-time simulations, Maps, Graphs, and More!, CPALMS 3D</p>
+<p style="text-align:left">May 2014 | Florida Association of Science Supervisors; Orlando, FL<br/> CPALMS Perspectives, CPALMS Code, CPALMS 3D</p>
+<p style="text-align:left">April 2014 | National Science Teacher Association 2014; Boston, MA<br/> CPALMS Perspectives: STEM Video Resources for Teacher Professional Development Interdisciplinary Model-eliciting Activities Bring Design, Engineering Practices, and RealWorld Context to the Science Classroom</p>
+<p style="text-align:left">Feb 2014 | Florida State University Stacking Layers Symposium; Tallahassee, FL<br/> Floor Presentation, 3D Printing Curriculum for K-12 STEM Education Panel Discussion Presenter, 3D Printing in K-12 STEM Education</p>
+<p style="text-align:left">Jan 2014 | Florida Educational Technology Conference(FETC); Orlando, FL<br/> CPALMS Perspectives and CPALMS 3D, conference floor booth</p>
+<p style="text-align:left">Oct 2013 | Florida Association of Science Teachers (FAST); Miami, FL<br/> CPALMS Creative Computing: Social Network Data and Visualization CPALMS Perspectives: STEM Videos to Bring the World to your Classroom</p>
+<p style="text-align:left">Oct 2013 | Florida Council of Teachers of Mathematics (FCTM); Orlando, FL<br/> CPALMS Perspectives: Experts, Teachers, Professionals, & Enthusiasts supporting STEM teacher professional development through standards-based video resources</p>
+<p style="text-align:left">June 2013 | Florida Alliance for Arts Education (FAAE), Invited co-presenter with FL Division of Cultural Affairs; Tampa, FL<br/> Funding: Opportunity, Quality and Practice (CPALMS Perspectives as a 'best practice') Teaching Artists Certifications (CPALMS Perspectives for CCSS integration)</p>
+<p style="text-align:left">Dec 2012 | FCR-STEM, Annual Conference; St. Petersburg, FL<br/> Unpacking & Mapping the Common Core State Standards Using CPALMS Tools CPALMS Perspectives: Standards-based Video Resources Model-Eliciting Activities: Applying Engineering Principles to Science and Mathematics</p>
+<p style="text-align:left">Oct 2012 | Florida Association of Science Teachers (FAST); St. Pete Beach, FL<br/> CPALMS Perspectives: Standards-Based Video Resources Modeling: Applying Science to Real-World Problem Solving</p>
+<p style="text-align:left">Oct 2012 | Florida Council of Teachers of Mathematics (FCTM); Orlando, FL<br/> CPALMS Perspectives Video Project: Experts, Teachers, and Professionals Unpacking & Mapping the Common Core State Standards using CPALMS Tools</p>
+<p style="text-align:left">Feb 2010 | AAAS and NSF GK-12 Special Focus Meeting; San Diego, CA<br/> Data Visualization for Middle School Students: Lesson Concepts and Challenges from the NSF GK-12 Program</p>
+<p style="text-align:left">Feb 2008 | NSF GK-12 Annual Conference; Washington, D.C.<br/> Effects of 3D Action Video Gameplay on Mental Rotation Ability and Visuospatial Chemistry Problem Solving Skill</p>
+<p style="text-align:left">Feb 2008 | Hoosier Association of Science Teachers; Indianapolis, IN<br/> Data Visualization for 8th Grade Mathematics & Science Enhancing Your Curriculum Through the Use of Visiting Scientists</p>
+<p style="text-align:left">Nov 2002 | American Society for Gravitational & Space Biology; Cape Canaveral, FL<br/> Touch-induced gene expression in Soybean</p>
+<p style="text-align:left">Nov 2001 | American Society for Gravitational & Space Biology; Alexandria, VA<br/> Molecular characterization of the thigmic stress response in soybean</p>
 
 
 </div><!--end Presentations container-->
