--- a/index.html
+++ b/index.html
@@ -451,6 +451,16 @@ Producer/Director for over 400 five-minute documentary-style videos about math a
 <a href="http://www.cpalms.org/Public/ResourceCollectioncategory/Preview/42" target="_blank">CPALMS Perspectives</a>
 </p>	
 	
+<p style="text-align:left"><b>Soybean Growth Response to Touch</b> | Horticulture Research<br /> 
+This video was recorded in a vibration-free darkroom illuminated by special green lighting designed to not stimulate growth. 
+	A watch was placed to aid in time measurement. As the seedlings emerge, they lengthen through expansion of cells in the 
+	hypocotyl elongation zone at a similar rate. At the time of touch, 
+	noted by the removal on an extra seedling in the front, one seedling 
+	(this one got poked) slows to a halt, while the other continues to elongate. 
+	Bonus: you can see the seedlings exhibiting nutation (bending back and forth) 
+	as they elongate in this time-lapse video. <br />
+<a href="../graphics/mov/soy1.MOV" target="_blank">Video</a>
+</p>
 	
 </div> <!--end outreach container-->
 
