--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@ This video was recorded in a vibration-free darkroom illuminated by special gree
 	Bonus: you can see the seedlings exhibiting nutation (bending back and forth) 
 	as they elongate in this time-lapse video. <br />
 <a href="../graphics/mov/soy1.MOV" target="_blank">Video</a>
+<video src="../graphics/mov/soy1.MOV" width="320" height="200" controls preload></video>
 </p>
 	
 </div> <!--end outreach container-->
