--- a/index.html
+++ b/index.html
@@ -459,8 +459,9 @@ This video was recorded in a vibration-free darkroom illuminated by special gree
 	(this one got poked) slows to a halt, while the other continues to elongate. 
 	Bonus: you can see the seedlings exhibiting nutation (bending back and forth) 
 	as they elongate in this time-lapse video. <br />
-<a href="../graphics/mov/soy1.MOV" target="_blank">Video</a>
-<video src="../graphics/mov/soy1.mp4" width="320" height="200" controls preload></video>
+<video src="../graphics/mov/soy1.mp4" width="400" height="300" controls preload></video> <br />
+<a href="../graphics/mov/soy1.MOV" target="_blank">Download Video</a>
+
 </p>
 	
 </div> <!--end outreach container-->
