--- a/index.html
+++ b/index.html
@@ -361,6 +361,12 @@ Focused my studies on plant biology. Worked with field biologist Daniel Marsh an
 <div id="outreach" class="container">
   <h3 class="text-center">Selected Outreach</h3> 
 
+<p style="text-align:left">May-Sep 2019 | <b>Facilitator</b> | Introduction to Probability - The Science of Uncertainty and Data (6.431x), Cambridge, MA<br /> 
+Collaboratively developed course materials and facilitated online sessions with students. This course fulfills some requirements for the Program in Data Science offered through the Universidad Tecnólogica (UTEC, Uruguay) which "uses the MITx MicroMasters Program in Statistics and Data Science to promote top talent from Latin America with skills in data science, statistics, machine learning and entrepreneurship."
+</p>
+<p style="text-align:left">May-Jul 2019 | <b>Module Developer</b> | MIT pK-12 Action Group STEAM Camp @ CIS (Hong Kong), Cambridge, MA<br /> 
+Collaboratively developed a middle-school lesson fusing climate data investigation, music performance, and musical instrument construction (didgeridoo and paixiao). 
+</p>
 <p style="text-align:left">Feb 2019 | <b>Program Lead</b> | JV InvenTeams Winter Break Program, Cambridge, MA<br /> 
 Collaboratively prepared and implemented invention education programming for middle school students. 
 </p>	
@@ -394,6 +400,10 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 <div id="projects" class="container">
   <h3 class="text-center">Projects</h3> 
 
+<p style="text-align:left"><b>Didgeridata</b> | MIT STEAM Camp 2019<br /> 
+Didgeridata is a playful lesson asking students to conduct an investigation of climate data trends, construct custom didgeridoo and paixiao (pan flute) musical instruments, and perform a data-inspired musical piece. Students gain a more sophisticated understanding of their world from a scientific research perspective, confidence in their ability to use hand tools, and experience in creative interdisciplinary performance. This lesson and all open-source materials were created for the MIT pK12 STEAM Camp in partnership with the Chinese International School in Hong Kong.<br />
+</p>
+	
 <p style="text-align:left"><b>JV InvenTeams Reporting</b> | Internal Reports Generation<br /> 
 Used R Markdown to produce internal reports for the Lemelson-MIT JV InvenTeams Program. Reports included metrics such as unique and total downloads over time and analyses of self-reported information provided by users through a web form. This task was undertaken to bring clarity, focus, and repeatability to prior analysis and reporting methods.<br />
 </p>	
