--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@ Focused my studies on plant biology. Worked with field biologist Daniel Marsh an
     <li class="active"><a data-toggle="tab" href="#home">Academia</a></li>
     <li><a data-toggle="tab" href="#menu1">Creativity</a></li>
     <li><a data-toggle="tab" href="#menu2">Outreach</a></li>
-    <li><a data-toggle="tab" href="menu3">K-12 Curriculum</a></li>
-    <li><a data-toggle="tab" href="menu4">Interdisciplinary</a></li>
+    <li><a data-toggle="tab" href="#menu3">K-12 Curriculum</a></li>
+    <li><a data-toggle="tab" href="#menu4">Interdisciplinary</a></li>
   </ul>
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
