--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ Assisted with management of a six-week undergraduate research experience at Kenn
   <h3 class="text-center">Projects</h3> 
 
 <p style="text-align:left"><b>Didgeridata</b> | MIT STEAM Camp 2019<br /> 
-Didgeridata is a playful lesson asking students to conduct an investigation of climate data trends, construct custom didgeridoo and paixiao (pan flute) musical instruments, and perform a data-inspired musical piece. Students gain a more sophisticated understanding of their world from a scientific research perspective, confidence in their ability to use hand tools, and experience in creative interdisciplinary performance. This lesson and all open-source materials were created for the MIT pK12 STEAM Camp in partnership with the Chinese International School in Hong Kong.<br />
+<a href="https://asantone.github.io/didgeridata/" target="_blank">Didgeridata</a> is a playful lesson asking students to conduct an investigation of climate data trends, construct custom didgeridoo and paixiao (pan flute) musical instruments, and perform a data-inspired musical piece. Students gain a more sophisticated understanding of their world from a scientific research perspective, confidence in their ability to use hand tools, and experience in creative interdisciplinary performance. This lesson and all open-source materials were created for the MIT pK12 STEAM Camp in partnership with the Chinese International School in Hong Kong.<br />
 </p>
 	
 <p style="text-align:left"><b>JV InvenTeams Reporting</b> | Internal Reports Generation<br /> 
