--- a/index.html
+++ b/index.html
@@ -392,6 +392,9 @@ Focused my studies on plant biology. Worked with field biologist Daniel Marsh an
 <div id="outreach" class="container">
   <h3 class="text-center">Selected Outreach</h3> 
 
+<p style="text-align:left">Sep-Nov 2019 | <b>Facilitator</b> | Data Analysis for Social Scientists (14.310x), Cambridge, MA<br /> 
+Collaboratively developed course materials and facilitated online sessions with students. This course fulfills some requirements for the Program in Data Science offered through the Universidad Tecnólogica (UTEC, Uruguay) which "uses the MITx MicroMasters Program in Statistics and Data Science to promote top talent from Latin America with skills in data science, statistics, machine learning and entrepreneurship."
+</p>
 <p style="text-align:left">May-Sep 2019 | <b>Facilitator</b> | Introduction to Probability - The Science of Uncertainty and Data (6.431x), Cambridge, MA<br /> 
 Collaboratively developed course materials and facilitated online sessions with students. This course fulfills some requirements for the Program in Data Science offered through the Universidad Tecnólogica (UTEC, Uruguay) which "uses the MITx MicroMasters Program in Statistics and Data Science to promote top talent from Latin America with skills in data science, statistics, machine learning and entrepreneurship."
 </p>
@@ -431,6 +434,13 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 <div id="projects" class="container">
   <h3 class="text-center">Projects</h3> 
 
+<p style="text-align:left"><b>Modules for 14.310x</b> | Data Analysis for Social Scientists<br /> 
+<ul>
+  <li><a href="notebook01.html" target="_blank">Notebook 01</a>: [Scatterplots] Pokemon</li>
+  <li><a href="notebook02.html" target="_blank">Notebook 02</a>: [Bar Charts and Leaflet Maps] Boston Vandalism</li>
+</ul>	
+</p>	
+	
 <p style="text-align:left"><b>Didgeridata</b> | MIT STEAM Camp 2019<br /> 
 <a href="https://asantone.github.io/didgeridata/" target="_blank">Didgeridata</a> is a playful lesson asking students to conduct an investigation of climate data trends, construct custom didgeridoo and paixiao (pan flute) musical instruments, and perform a data-inspired musical piece. Students gain a more sophisticated understanding of their world from a scientific research perspective, confidence in their ability to use hand tools, and experience in creative interdisciplinary performance. This lesson and all open-source materials were created for the MIT pK12 STEAM Camp in partnership with the Chinese International School in Hong Kong.<br />
 </p>
