--- a/index.html
+++ b/index.html
@@ -436,8 +436,9 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 
 <p style="text-align:left"><b>Modules for 14.310x</b> | Data Analysis for Social Scientists<br /> 
 <ul>
-  <li><a href="notebook01.html" target="_blank">Notebook 01</a>: [Bar Charts and Leaflet Maps] Boston Vandalism</li>
-  <li><a href="notebook02.html" target="_blank">Notebook 02</a>: [Scatterplots] Pokemon</li>
+  <li><a href="notebook01.html" target="_blank">Session 01: Notebook 01</a>: [Bar Charts and Leaflet Maps] Boston Vandalism</li>
+  <li><a href="notebook02.html" target="_blank">Session 01: Notebook 02</a>: [Scatterplots] Pokemon</li>
+  <li><a href="session02.html" target="_blank">Session 02: Notebook 03</a>: [Fundamentals] Permutations, Combinations, Frequency, Distributions, Continuous and Discrete Random Variables</li>
 </ul>	
 </p>	
 	
