--- a/index.html
+++ b/index.html
@@ -436,9 +436,10 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 
 <p style="text-align:left"><b>Modules for 14.310x</b> | Data Analysis for Social Scientists<br /> 
 <ul>
-  <li><a href="notebook01.html" target="_blank">Session 01: Notebook 01</a>: Bar Charts & Leaflet Maps</li>
-  <li><a href="notebook02.html" target="_blank">Session 01: Notebook 02</a>: Scatterplots</li>
-  <li><a href="session02.html" target="_blank">Session 02: Notebook 03</a>: Fundamentals</li>
+  <li><a href="notebook01.html" target="_blank">Module 01: Notebook 01</a>: Bar Charts & Leaflet Maps</li>
+  <li><a href="notebook02.html" target="_blank">Module 01: Notebook 02</a>: Scatterplots</li>
+  <li><a href="session02.html" target="_blank">Module 02: Notebook 03</a>: Fundamentals</li>
+  <li><a href="module03.html" target="_blank">Module 03: Notebook 04</a>: Histograms, Kernel Density Estimates, & Joint Density Plots</li>
 </ul>	
 </p>	
 	
