--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@ Assisted with management of a six-week undergraduate research experience at Kenn
   <li><a href="notebook02.html" target="_blank">Module 01: Notebook 02</a>: Scatterplots</li>
   <li><a href="session02.html" target="_blank">Module 02: Notebook 03</a>: Fundamentals</li>
   <li><a href="module03.html" target="_blank">Module 03: Notebook 04</a>: Histograms, Kernel Density Estimates, & Joint Density Plots</li>
+  <li><a href="module04.html" target="_blank">Module 04: Notebook 05</a>: Markov Inequality Simulation</li>
 </ul>	
 </p>	
 	
