--- a/index.html
+++ b/index.html
@@ -436,11 +436,12 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 
 <p style="text-align:left"><b>Modules for 14.310x</b> | Data Analysis for Social Scientists<br /> 
 <ul>
-  <li><a href="notebook01.html" target="_blank">Module 01: Notebook 01</a>: Bar Charts & Leaflet Maps</li>
-  <li><a href="notebook02.html" target="_blank">Module 01: Notebook 02</a>: Scatterplots</li>
-  <li><a href="session02.html" target="_blank">Module 02: Notebook 03</a>: Fundamentals</li>
-  <li><a href="module03.html" target="_blank">Module 03: Notebook 04</a>: Histograms, Kernel Density Estimates, & Joint Density Plots</li>
-  <li><a href="module04.html" target="_blank">Module 04: Notebook 05</a>: Markov Inequality Simulation</li>
+  <li><a href="notebook01.html" target="_blank">Module 01: Part 1</a>: Bar Charts & Leaflet Maps</li>
+  <li><a href="notebook02.html" target="_blank">Module 01: Part 2</a>: Scatterplots</li>
+  <li><a href="session02.html" target="_blank">Module 02</a>: Fundamentals</li>
+  <li><a href="module03.html" target="_blank">Module 03</a>: Histograms, Kernel Density Estimates, & Joint Density Plots</li>
+  <li><a href="module04.html" target="_blank">Module 04</a>: Markov Inequality Simulation</li>
+  <li><a href="module05.html" target="_blank">Module 05</a>: Distributions and qnorm()</li>
 </ul>	
 </p>	
 	
