--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@ Assisted with management of a six-week undergraduate research experience at Kenn
   <li><a href="module03.html" target="_blank">Module 03</a>: Histograms, Kernel Density Estimates, & Joint Density Plots</li>
   <li><a href="module04.html" target="_blank">Module 04</a>: Markov Inequality Simulation</li>
   <li><a href="module05.html" target="_blank">Module 05</a>: Distributions and qnorm()</li>
+  <li><a href="module06.html" target="_blank">Module 06</a>: Maximum (Log) Likelihood Estimation</li>
 </ul>	
 </p>	
 	
