--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@ Assisted with management of a six-week undergraduate research experience at Kenn
   <li><a href="module04.html" target="_blank">Module 04</a>: Markov Inequality Simulation</li>
   <li><a href="module05.html" target="_blank">Module 05</a>: Distributions and qnorm()</li>
   <li><a href="module06.html" target="_blank">Module 06</a>: Maximum (Log) Likelihood Estimation</li>
+  <li><a href="module07.html" target="_blank">Module 07</a>: Nonparametric Regression</li>
 </ul>	
 </p>	
 	
