--- a/r.html
+++ b/r.html
@@ -6,7 +6,7 @@
 <body>
 
   
-  <div data-datacamp-exercise data-lang="r">
+  <div data-datacamp-exercise data-lang="r", height="800px">
 	<code data-type="pre-exercise-code">
 		# This will get executed each time the exercise gets initialized
 		b = 6
