--- a/r.html
+++ b/r.html
@@ -20,8 +20,8 @@
 
 	</code>
 	<code data-type="solution">
-		# Create a variable a, equal to 5
-		a <- 5
+		# Make some data
+		a <- c(1,2,3,4,5)
 
 		# Print out a
 		print(a)
