--- a/r.html
+++ b/r.html
@@ -12,7 +12,7 @@
 		b = 6
 	</code>
 	<code data-type="sample-code">
-		# Create a variable a, equal to 5
+		# Make some data: 1,2,3,4,5
 
 
 		# Print out a
