--- a/r.html
+++ b/r.html
@@ -6,13 +6,13 @@
 <body>
 
   
-  <div data-datacamp-exercise data-lang="r", height="800px">
+  <div data-datacamp-exercise data-lang="r" data-height="800">
 	<code data-type="pre-exercise-code">
 		# This will get executed each time the exercise gets initialized
 		b = 6
 	</code>
 	<code data-type="sample-code">
-		# Make some data: 1,2,3,4,5
+		# Make some data: 1,2,3,4,5,6,7
 
 
 		# Print out a
