--- a/r.html
+++ b/r.html
@@ -6,18 +6,32 @@
 <body>
 
   
-  <div data-datacamp-exercise data-lang="r" data-height="800">
+  <div data-datacamp-exercise data-lang="r" data-height="600">
 	<code data-type="pre-exercise-code">
 		# This will get executed each time the exercise gets initialized
 		b = 6
 	</code>
 	<code data-type="sample-code">
-		# Make some data: 1,2,3,4,5,6,7
 
+library(tidyverse) #data organization and plotting
+library(knitr)     #nice tables and for rmarkdown
+library(AppliedPredictiveModeling) #for data
 
-		# Print out a
+data(abalone)
 
+#check the data
+head(abalone)
 
+#look at the structure of the data
+str(abalone)
+
+#store data as a tibble (shorter name also)
+#this is more for personal preference
+df<-as.tibble(abalone)
+
+#check the data/result
+head(df)
+		
 	</code>
 	<code data-type="solution">
 		# Make some data
