--- a/index.html
+++ b/index.html
@@ -508,6 +508,12 @@ Producer/Director for over 400 five-minute documentary-style videos about math a
 <a href="http://www.cpalms.org/Public/ResourceCollectioncategory/Preview/42" target="_blank">CPALMS Perspectives</a>
 </p>	
 	
+<p style="text-align:left"><b>Smart Gardening: An Introduction to Raised-Beds, Soils, Plant
+Nutrition, and Composting</b> | Self-published Gardening Information<br /> 
+Created a resource on raised-bed gardening for beginning and experienced enthusiasts.<br />
+<a href="RBG_672011.pdf" target="_blank">Smart Gardening [.pdf]</a>
+</p>	
+	
 <p style="text-align:left"><b>Soybean Growth Response to Touch</b> | Horticulture Research<br /> 
 This video was recorded in a vibration-free darkroom illuminated by special green lighting designed to not stimulate growth. 
 	A watch was placed to aid in time measurement. As the seedlings emerge, they lengthen through expansion of cells in the 
