--- a/biobuilder/mu.html
+++ b/biobuilder/mu.html
@@ -8,7 +8,8 @@
   
 <div data-datacamp-exercise data-lang="r" data-height="600">
 <code data-type="sample-code">
-
+library(ggplot2)
+	
 abs420<-seq(0.5,1.0,by=0.01)
 t<-150
 v<-0.02
