--- a/index.html
+++ b/index.html
@@ -445,6 +445,7 @@ Assisted with management of a six-week undergraduate research experience at Kenn
   <li><a href="module06.html" target="_blank">Module 06</a>: Maximum (Log) Likelihood Estimation</li>
   <li><a href="module07.html" target="_blank">Module 07</a>: Nonparametric Regression</li>
   <li><a href="module08.html" target="_blank">Module 08</a>: Linear Regression</li>
+  <li><a href="module09.html" target="_blank">Module 09</a>: Fuzzy Regression Discontinuity Design</li>
 </ul>	
 </p>	
 	
