--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ Team Leader, Student team project. Used html, d3, javascript, and vector graphic
 	
 <p style="text-align:left"><b>Statistics Analysis through R Code</b> | Ecology Teacher Professional Development<br /> 
 Created instructional statistical analysis code modules for Middle School and High School science teachers to help improve science methodology and educational technology skills. Modules were written in R, a popular statistical analysis language for scientists and were posted using R-fiddle, an online editor which allows for collaborative development and sharing. <br />
-<a href="http://diversityandecology.blogspot.com/" target="_blank">Statistical Analysis Code Modules (blog site)</a>
+<a href="https://asantone.github.io/eco/" target="_blank">Statistical Analysis Code Modules</a>
 </p>
 	
 <p style="text-align:left"><b>CPALMS 3D & MyStemKits</b> | 3D Printing Resources for K-12 Education<br /> 
