--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ Assisted with management of a six-week undergraduate research experience at Kenn
   <li><a href="module08.html" target="_blank">Module 08</a>: Linear Regression</li>
   <li><a href="module09.html" target="_blank">Module 09</a>: Fuzzy Regression Discontinuity Design</li>
   <li><a href="module10.html" target="_blank">Module 10</a>: Design Principles of Data Visualization</li>
-  <li><a href="module11.html" target="_blank">Module 11</a>: Random Forest Regression</li>
+  <li><a href="module11.html" target="_blank">Module 11</a>: Random Forest Regression & Sentiment Analysis</li>
 </ul>	
 </p>	
 	
