--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@ Assisted with management of a six-week undergraduate research experience at Kenn
   <li><a href="module09.html" target="_blank">Module 09</a>: Fuzzy Regression Discontinuity Design</li>
   <li><a href="module10.html" target="_blank">Module 10</a>: Design Principles of Data Visualization</li>
   <li><a href="module11.html" target="_blank">Module 11</a>: Random Forest Regression & Sentiment Analysis</li>
+  <li><a href="module12b.html" target="_blank">Module 12</a>: Review: Sharp Regression Discontinuity & Nonparametric Regression</li>
 </ul>	
 </p>	
 	
