--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 	<li><a href="#projects">Projects</a></li>
 	<li><a href="#publications">Publications</a></li>
 	<li><a href="#presentations">Presentations</a></li>
+	<li><a href="#apt">Available Professional Training</a></li>  
       </ul>
     </div>
   </div>
@@ -587,7 +588,13 @@ This video was recorded in a vibration-free darkroom illuminated by special gree
 
 </div><!--end Presentations container-->
 
-
+<div id="apt" class="container text-center">
+  <h3>Available Professional Training</h3>
+		
+For custom professional training, professional development, or consulting in quantitative analysis, data visualization, data science, R programming, or K-12 STEAM topics, please contact me at adam /dot santone /at gmail /dot com. 
+		I have broad experience in middle/high-school teacher professional development, K-12 curriculum development, media production, R programming, and instruction of statistical analysis methods for adult learners. 		
+		
+</div><!--end APT container-->
 
 <script>
 $(document).ready(function(){
