--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#myPage">Home</a></li>
-        <li><a href="#about">About Me</a></li>
+        <li><a href="#about">About</a></li>
 	<li><a href="#education">Education</a></li>
         <li><a href="#reviews">Reviews</a></li>
 	<li><a href="#outreach">Outreach</a></li>
 	<li><a href="#projects">Projects</a></li>
 	<li><a href="#publications">Publications</a></li>
 	<li><a href="#presentations">Presentations</a></li>
-	<li><a href="#apt">Available Professional Training</a></li>  
+	<li><a href="#apt">Training</a></li>  
       </ul>
     </div>
   </div>
