--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@ This video was recorded in a vibration-free darkroom illuminated by special gree
 
 </div><!--end Presentations container-->
 
-<div id="apt" class="container text-center">
+<div id="apt" class="container">
   <h3>Available Professional Training</h3>
 		
 For custom professional training, professional development, or consulting in quantitative analysis, data visualization, data science, R programming, or K-12 STEAM topics, please contact me at adam /dot santone /at gmail /dot com. 
