--- a/index.html
+++ b/index.html
@@ -393,6 +393,10 @@ Focused my studies on plant biology. Worked with field biologist Daniel Marsh an
 <div id="outreach" class="container">
   <h3 class="text-center">Selected Outreach</h3> 
 
+	
+<p style="text-align:left">Dec 2019 | <b>Presenter</b> | SaturPlay!, New York, NY<br /> 
+In collaboration with the MIT pK-12 group and the MIT Club of New York, presented a middle-school lesson fusing climate data investigation, music performance, and didgeridoo construction. 
+</p>	
 <p style="text-align:left">Sep-Nov 2019 | <b>Facilitator</b> | Data Analysis for Social Scientists (14.310x), Cambridge, MA<br /> 
 Collaboratively developed course materials and facilitated online sessions with students. This course fulfills some requirements for the Program in Data Science offered through the Universidad Tecnólogica (UTEC, Uruguay) which "uses the MITx MicroMasters Program in Statistics and Data Science to promote top talent from Latin America with skills in data science, statistics, machine learning and entrepreneurship."
 </p>
